--- a/week.yaml
+++ b/week.yaml
@@ -1,40 +1,37 @@
-week_ending: "09/13/2025"
-name: "John Doe"
-id_or_ssn: "999-99-9999"
+name: "Farooq Mahmud"
+ssn: "555-55-1234"
+week_ending: "09/27/2025"
 
 contacts:
-  - date: "09/08/2025"
-    kind: "Employer contact"
-    contact_method: "Online"
-    contact_type: "Application/resume"
-    job_title_or_ref: "Senior Software Engineer"
-    employer: "Evergreen Tech Solutions"
+  - date: "09/22/2025"
+    job_title: "Senior .NET Engineer"
+    business_name: "Evergreen Tech Solutions"
     address: "4250 Innovation Way"
     city: "Bellevue"
     state: "WA"
-    website_or_email: "https://www.evergreentechsolutions.com"
+    website_or_email: "https://www.evergreentechsolutions.com/jobs/42"
     phone: "(425) 555-1212"
-
-  - date: "09/08/2025"
-    kind: "Employer contact"
-    contact_method: "Online"
+    contact_method: ["Online"]
     contact_type: "Application/resume"
-    job_title_or_ref: "Senior .Net Dev"
-    employer: "Cascade Data Systems"
+
+  - date: "09/23/2025"
+    job_title: ".NET Engineer"
+    business_name: "Cascade Data Systems"
     address: "9800 Rainier Ave S"
     city: "Seattle"
     state: "WA"
     website_or_email: "https://www.cascadedata.io"
     phone: "(206) 555-9876"
-
-  - date: "09/08/2025"
-    kind: "Employer contact"
-    contact_method: "Online"
+    contact_method: [ "Online" ]
     contact_type: "Application/resume"
-    job_title_or_ref: "Senior Software Engineer"
-    employer: "Northwest Cloudworks"
+
+  - date: "09/24/2025"
+    job_title: "Principal Engineer"
+    business_name: "Northwest Cloudworks"
     address: "210 Lakeview Blvd E"
     city: "Kirkland"
     state: "WA"
     website_or_email: "https://www.nwcloudworks.com"
     phone: "(425) 555-4433"
+    contact_method: [ "Online" ]
+    contact_type: "Application/resume"
