feat: Get contact information using OpenAI's web search tool.

--- a/week.yaml
+++ b/week.yaml
@@ -7,35 +7,20 @@ contacts:
   - date: "09/22/2025"
     activity_choice: "employer contact"
     job_title: "Senior .NET Engineer"
-    business_name: "Evergreen Tech Solutions"
-    address: "4250 Innovation Way"
-    city: "Bellevue"
-    state: "WA"
-    website_or_email: "https://www.evergreentechsolutions.com/jobs/42"
-    phone: "(425) 555-1212"
+    business_name: "HopSkip"
     contact_method: ["Online"]
     contact_type: "application/resume"
 
   - date: "09/23/2025"
     activity_choice: "employer contact"
     job_title: ".NET Engineer"
-    business_name: "Cascade Data Systems"
-    address: "9800 Rainier Ave S"
-    city: "Seattle"
-    state: "WA"
-    website_or_email: "https://www.cascadedata.io"
-    phone: "(206) 555-9876"
+    business_name: "PerfectServe"
     contact_method: ["Online"]
     contact_type: "application/resume"
 
   - date: "09/24/2025"
     activity_choice: "employer contact"
     job_title: "Principal Engineer"
-    business_name: "Northwest Cloudworks"
-    address: "210 Lakeview Blvd E"
-    city: "Kirkland"
-    state: "WA"
-    website_or_email: "https://www.nwcloudworks.com"
-    phone: "(425) 555-4433"
+    business_name: "Deloitte"
     contact_method: ["Online"]
     contact_type: "application/resume"
