--- a/week.yaml
+++ b/week.yaml
@@ -1,41 +1,26 @@
 ---
 name: "Farooq Mahmud"
 ssn: "XXX-XX-XXXX"
-week_ending: "09/27/2025"
+week_ending: "10/25/2025"
 
 contacts:
-  - date: "09/22/2025"
+  - date: "10/21/2025"
     activity_choice: "employer contact"
-    job_title: "Senior .NET Engineer"
-    business_name: "Evergreen Tech Solutions"
-    address: "4250 Innovation Way"
-    city: "Bellevue"
-    state: "WA"
-    website_or_email: "https://www.evergreentechsolutions.com/jobs/42"
-    phone: "(425) 555-1212"
+    business_name: "Perfect Serve"
+    job_title: "Senior. Software Engineer"
     contact_method: ["Online"]
     contact_type: "application/resume"
 
-  - date: "09/23/2025"
+  - date: "10/21/2025"
     activity_choice: "employer contact"
-    job_title: ".NET Engineer"
-    business_name: "Cascade Data Systems"
-    address: "9800 Rainier Ave S"
-    city: "Seattle"
-    state: "WA"
-    website_or_email: "https://www.cascadedata.io"
-    phone: "(206) 555-9876"
+    business_name: "HopSkip"
+    job_title: "Lead Dotnet Developer"
     contact_method: ["Online"]
     contact_type: "application/resume"
 
-  - date: "09/24/2025"
+  - date: "10/21/2025"
     activity_choice: "employer contact"
-    job_title: "Principal Engineer"
-    business_name: "Northwest Cloudworks"
-    address: "210 Lakeview Blvd E"
-    city: "Kirkland"
-    state: "WA"
-    website_or_email: "https://www.nwcloudworks.com"
-    phone: "(425) 555-4433"
+    business_name: "Carnival Cruise Lines"
+    job_title: "Lead Dotnet Developer"
     contact_method: ["Online"]
     contact_type: "application/resume"
