feat: Enhance OpenTelemetry configuration and error handling in telemetry and contact info service

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,11 @@ OTEL_SERVICE_NAME=pdf-form-filler
 # OTLP exporter endpoint (gRPC)
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 
+# Sampler that always samples spans
+OTEL_TRACES_SAMPLER=always_on
+
 # Optional: Enable verbose debug output for PDF field operations
 ESD_VERBOSE=false
+
+# Optional: Use insecure mode (set to TRUE for LOCAL DEVELOPMENT ONLY)
+OTEL_EXPORTER_OTLP_INSECURE=true
